<resources>
    <string name="app_name">Beauty Salon</string>
    <string name="total">Total</string>
    <string name="entrada">Entrada</string>
    <string name="sa_da">Saída</string>
    <string name="p_gina_inicial">Página Inicial</string>
    <string name="editar">Editar</string>
    <string name="voltar">Voltar</string>
    <string name="visualizar">Visualizar</string>
    <string name="inserir_cliente">Inserir Cliente</string>
    <string name="valor">Valor</string>
    <string name="servi_o">Serviço</string>
    <string name="nome_do_cliente">Nome Do Cliente:</string>
    <string name="nome_do_cliente2">Nome do Cliente</string>
    <string name="servi_o2">Serviço:</string>
    <string name="valor2">Valor:</string>
    <string name="devendo">Devendo:</string>
    <string name="data2">Data:</string>
    <string name="id">ID</string>
    <string name="id2">ID</string>
    <string name="cliente">Cliente</string>
    <string name="cliente2">Cliente</string>
    <string name="servi_o3">Serviço</string>
    <string name="servi_o4">Serviço</string>
    <string name="valor4">Valor</string>
    <string name="valor5">Valor</string>
    <string name="devendo6">Devendo</string>
    <string name="devendo5">Devendo</string>
    <string name="data">Data</string>
    <string name="data3">Data</string>
    <string name="deseja_remover_este_elemento">Deseja Remover Este Elemento?</string>
    <string name="sim">Sim</string>
    <string name="n_o">Não</string>
    <string name="adicionar">Adicionar</string>
    <string name="remover">Remover</string>
</resources>