<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#987777"
    tools:context=".EntradaEditar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100sp"
            android:background="@android:color/holo_red_dark"
            android:gravity="center"
            android:text="@string/inserir_cliente"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#C70AD5"
                android:gravity="center|end"
                android:text="@string/nome_do_cliente"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="241dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="#C70AD5"
                android:ems="10"
                android:gravity="center"
                android:hint="Digite Nome do Cliente"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:gravity="center|end"
                android:text="@string/servi_o2"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="241dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:ems="10"
                android:gravity="center"
                android:hint="Digite Serviço"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                android:gravity="center|end"
                android:text="@string/valor2"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="241dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                android:ems="10"
                android:gravity="center"
                android:hint="Digite Valor"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:background="#F32020"
                android:gravity="center|end"
                android:text="@string/devendo"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#E60EDB"
                android:gravity="center|end"
                android:text="@string/data2"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextNumber3"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="#E60EDB"
                android:ems="10"
                android:gravity="center"
                android:hint="Dia"
                android:inputType="number"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="#E60EDB"
                android:ems="10"
                android:gravity="center"
                android:hint="Mês"
                android:inputType="number"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="#E60EDB"
                android:ems="10"
                android:gravity="center"
                android:hint="Ano"
                android:inputType="number"
                android:textColor="@color/white" />


        </LinearLayout>

        <Button
            android:id="@+id/button5"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:text="Adicionar Serviço" />
    </LinearLayout>
</ScrollView>
